# EnumExtension

./: .gitignore  CMakeLists.txt  README.md
Include/: EnumExtension.hpp
Tests/: CMakeLists.txt  ValueAsStringTests.cpp
